--- a/instance/game-engine/Cargo.toml
+++ b/instance/game-engine/Cargo.toml
@@ -10,4 +10,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.87"
+console_error_panic_hook = "0.1.7"
+rhai = { version = "1.15.1", features = ["wasm-bindgen"] }
 
