--- a/instance/game-engine/Cargo.toml
+++ b/instance/game-engine/Cargo.toml
@@ -9,7 +9,21 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+js-sys = "0.3.64"
 wasm-bindgen = "0.2.87"
 console_error_panic_hook = "0.1.7"
 rhai = { version = "1.15.1", features = ["wasm-bindgen"] }
+
+[dependencies.web-sys]
+version = "0.3.64"
+features = [
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'WebGlBuffer',
+  'WebGlRenderingContext',
+  'WebGlProgram',
+  'WebGlShader',
+  'Window',
+]
 
