--- a/instance/game-engine/Cargo.toml
+++ b/instance/game-engine/Cargo.toml
@@ -22,8 +22,10 @@ features = [
   'HtmlCanvasElement',
   'WebGlBuffer',
   'WebGlRenderingContext',
+  'WebGlUniformLocation',
   'WebGlProgram',
   'WebGlShader',
   'Window',
+  'console',
 ]
 
