--- a/instance/game-engine/Cargo.toml
+++ b/instance/game-engine/Cargo.toml
@@ -12,7 +12,16 @@ crate-type = ["cdylib"]
 js-sys = "0.3.64"
 wasm-bindgen = "0.2.87"
 console_error_panic_hook = "0.1.7"
-rhai = { version = "1.15.1", features = ["wasm-bindgen"] }
+
+[dependencies.rhai]
+version = "1.15.1"
+features = [
+  "wasm-bindgen",
+  "f32_float",
+  "no_time",
+  "no_module",
+  "no_custom_syntax"
+]
 
 [dependencies.web-sys]
 version = "0.3.64"
@@ -27,5 +36,7 @@ features = [
   'WebGlShader',
   'Window',
   'console',
+  'EventTarget',
+  'KeyboardEvent',
 ]
 
