changed a lot of stuff

--- a/flaskr/static/base-files/stateConfig.json
+++ b/flaskr/static/base-files/stateConfig.json
@@ -1,3 +1,10 @@
 {
-    "initial-scene": 1
+    "initial-scene": 1,
+    "fps": 60,
+    "canvas-width": 960,
+    "canvas-height": 540,
+    "browser-title": "2D Web Game",
+    "version": [1,0,0,0],
+    "folder-name": "2dgamehtml5",
+    "output-name": "index"
 }
