--- a/instance/game-engine/Cargo.toml
+++ b/instance/game-engine/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 js-sys = "0.3.64"
 wasm-bindgen = "0.2.87"
 console_error_panic_hook = "0.1.7"
+image = "0.24.7"
 
 [dependencies.rhai]
 version = "1.15.1"
