image rendering and more

--- a/instance/game-engine/Cargo.toml
+++ b/instance/game-engine/Cargo.toml
@@ -33,9 +33,11 @@ features = [
   'HtmlCanvasElement',
   'WebGlBuffer',
   'WebGlRenderingContext',
+  'WebGlContextAttributes',
   'WebGlUniformLocation',
   'WebGlProgram',
   'WebGlShader',
+  'WebGlTexture',
   'Window',
   'console',
   'EventTarget',
