--- a/flask_server/static/base-files/objectConfig.json
+++ b/flask_server/static/base-files/objectConfig.json
@@ -1,7 +1,5 @@
 {
     "sprites": [],
-    "collision-boxes": 
-    [
-        {"x1": 10, "y1": 10, "x2": 10, "y2": 10}
-    ]
+    "audios": [],
+    "fonts": []
 }
