Fixed canvas resize issues

--- a/game-engine/Cargo.toml
+++ b/game-engine/Cargo.toml
@@ -30,6 +30,7 @@ version = "0.3.64"
 features = [
   'Document',
   'Element',
+  'DomRect',
   'HtmlCanvasElement',
   'WebGlBuffer',
   'WebGlRenderingContext',
